14 Jun 2013: Wouter
	- Optimizations: -O3 if possible (user can override CFLAGS), udp
	  buffers are set to 1m by default (if socket options exist),
	  use recvmmsg and sendmmsg, or only recvmmsg, or recvfrom.

11 Jun 2013: Wouter
	- Fix memory leak in zone parser for txt record (since the large
	  number of txt subsections fix).
	- Fix zone parser allocations to be in db region.
	- nsd-mem prints advice

5 Jun 2013: Wouter
	- Fix segfault on repeated reconfigs, double free of zone apex name.

4 Jun 2013: Wouter
	- Remove duplicate zlfile variable from options structure.

30 May 2013: Wouter
	- Fix nsd-mem for printout of values above 4G.

16 May 2013: Wouter
	- Patch from Lukas Wunner that makes chroot more consistent.
	  Make all paths absolute with the chrootdir in front, or use
	  an absolute zonesdir with other patsh relative to that.

3 May 2013: Wouter
	- Fix race on exit of nsd, for restarts, so that the pidfile-pid
	  process waits until port53 has been closed before exiting.
	- update acx_nlnetlabs.m4 to v23, sleep w32 fix.

29 April 2013: Wouter
	- Remove unused pointer and fixup chroot include for trail slash.

26 April 2013: Wouter
	- Patch from Lukas Wunner that makes nsd.conf include files work
	  inside chroot/etc environments on repattern and reconfig.

25 April 2013: Matthijs
	- New config option "ip-transparent:", to bind to non local addresses
	  (thanks Arjen Zonneveld).
	- RRtypes ASFDB, RP, RT should not compress dnames (thanks Peter
	  van Dijk).

19 April 2013: Wouter
	- own snprintf, fix use of snprintf return value (in debug print).

18 April 2013: Wouter
	- fix bug #491: pick program name (0th argument) as syslog identity.

9 April 2013: Wouter
	- Bug #494: Exit with return code 1 if socket code fails. (from 3.2)
	- Fix B64_NTOP replacement definitions in configure.ac.

26 March 2013: Wouter
	- update lookup3.c with better endianness detection.

25 March 2013: Wouter
	- faster nsec3 updates.
	- Fixup contrib/bug390.patch for 4.0.0b4.