@@ -57,6 +57,10 @@ BUG FIXES:
 FEATURES:
 	- New config option "ip-transparent:" to allow NSD to bind to
 	  non local addresses. Default no.
+	- New config option "rrl-slip:" to set the average number of
+	  packets discarded before we send back a truncated response.
+	- New config option "rrl-ipv4-prefix-length:" and
+	  "rrl-ipv6-prefix-length:" to set the prefix lengths.
 
 BUG FIXES:
 	- RRtypes ASFDB, RP, RT should not compress dnames.
