@@ -47,13 +47,18 @@ struct rrl_bucket {
 static struct rrl_bucket* rrl_array = NULL;
 static size_t rrl_array_size = RRL_BUCKETS;
 static uint32_t rrl_ratelimit = RRL_LIMIT; /* 2x qps */
+static uint8_t rrl_slip_ratio = RRL_SLIP;
+static uint8_t rrl_ipv4_prefixlen = RRL_IPV4_PREFIX_LENGTH;
+static uint8_t rrl_ipv6_prefixlen = RRL_IPV6_PREFIX_LENGTH;
+static uint32_t rrl_ipv6_mask[2]; /* max prefixlen 64 */
 static uint32_t rrl_whitelist_ratelimit = RRL_WLIST_LIMIT; /* 2x qps */
 
 /* the array of mmaps for the children (saved between reloads) */
 static void** rrl_maps = NULL;
 static size_t rrl_maps_num = 0;
 
-void rrl_mmap_init(int numch, size_t numbuck, size_t lm, size_t wlm)
+void rrl_mmap_init(int numch, size_t numbuck, size_t lm, size_t wlm, size_t sm,
+	size_t plf, size_t pls)
 {
 #ifdef HAVE_MMAP
 	size_t i;
@@ -61,6 +66,17 @@ void rrl_mmap_init(int numch, size_t numbuck, size_t lm, size_t wlm)
 	if(numbuck != 0)
 		rrl_array_size = numbuck;
 	rrl_ratelimit = lm*2;
+	rrl_slip_ratio = sm;
+	rrl_ipv4_prefixlen = plf;
+	rrl_ipv6_prefixlen = pls;
+	if (pls < 32) {
+		rrl_ipv6_mask[0] = htonl(0xffffffff << (32-pls));
+		rrl_ipv6_mask[1] = 0;
+	} else {
+		pls -= 32;
+		rrl_ipv6_mask[0] = 0xffffffff;
+		rrl_ipv6_mask[1] = htonl(0xffffffff << (32-pls));
+	}
 	rrl_whitelist_ratelimit = wlm*2;
 #ifdef HAVE_MMAP
 	/* allocate the ratelimit hashtable in a memory map so it is
@@ -69,7 +85,7 @@ void rrl_mmap_init(int numch, size_t numbuck, size_t lm, size_t wlm)
 	rrl_maps = (void**)xalloc(sizeof(void*)*rrl_maps_num);
 	for(i=0; i<rrl_maps_num; i++) {
 		rrl_maps[i] = mmap(NULL,
-			sizeof(struct rrl_bucket)*rrl_array_size, 
+			sizeof(struct rrl_bucket)*rrl_array_size,
 			PROT_READ|PROT_WRITE, MAP_SHARED|MAP_ANONYMOUS, -1, 0);
 		if(rrl_maps[i] == MAP_FAILED) {
 			log_msg(LOG_ERR, "rrl: mmap failed: %s",
@@ -105,7 +121,6 @@ void rrl_init(size_t ch)
  * for genuine queries and the target for reflected packets */
 static uint64_t rrl_get_source(query_type* query, uint16_t* c2)
 {
-	/* we take a /24 for IPv4 and /64 for IPv6 */
 	/* note there is an IPv6 subnet, that maps
 	 * to the same buckets as IPv4 space, but there is a flag in c2
 	 * that makes the hash different */
@@ -113,17 +128,20 @@ static uint64_t rrl_get_source(query_type* query, uint16_t* c2)
 	if( ((struct sockaddr_in*)&query->addr)->sin_family == AF_INET) {
 		*c2 = 0;
 		return ((struct sockaddr_in*)&query->addr)->
-			sin_addr.s_addr & htonl(0xffffff00);
+			sin_addr.s_addr & htonl(0xffffffff << (32-rrl_ipv4_prefixlen));
 	} else {
 		uint64_t s;
+		uint32_t* mask;
 		*c2 = rrl_ip6;
-		memmove(&s, &((struct sockaddr_in6*)&query->addr)->sin6_addr,
+		mask = (uint32_t*) memmove(&s, &((struct sockaddr_in6*)&query->addr)->sin6_addr,
 			sizeof(s));
+		*mask &= rrl_ipv6_mask[0];
+		*(mask+1) &= rrl_ipv6_mask[1];
 		return s;
 	}
 #else
 	*c2 = 0;
-	return query->addr.sin_addr.s_addr & htonl(0xffffff00);
+	return query->addr.sin_addr.s_addr & htonl(0xffffffff << (32-rrl_ipv4_prefixlen));
 #endif
 }
 
@@ -140,7 +158,11 @@ static const char* rrlsource2str(uint64_t s, uint16_t c2)
 		memmove(&a6, &s, sizeof(s));
 		if(!inet_ntop(AF_INET6, &a6, buf, sizeof(buf)))
 			strlcpy(buf, "[ip6 ntop failed]", sizeof(buf));
-		else	strlcat(buf, "/64", sizeof(buf));
+		else {
+			static char prefix[4];
+			snprintf(prefix, sizeof(prefix), "/%d", rrl_ipv6_prefixlen);
+			strlcat(buf, &prefix[0], sizeof(buf));
+		}
 		return buf;
 	}
 #endif
@@ -148,7 +170,11 @@ static const char* rrlsource2str(uint64_t s, uint16_t c2)
 	a4.s_addr = (uint32_t)s;
 	if(!inet_ntop(AF_INET, &a4, buf, sizeof(buf)))
 		strlcpy(buf, "[ip4 ntop failed]", sizeof(buf));
-	else	strlcat(buf, "/24", sizeof(buf));
+	else {
+		static char prefix[4];
+		snprintf(prefix, sizeof(prefix), "/%d", rrl_ipv4_prefixlen);
+		strlcat(buf, &prefix[0], sizeof(buf));
+	}
 	return buf;
 }
 
@@ -186,7 +212,7 @@ const char* rrltype2str(enum rrl_type c)
 
 /** classify the query in a number of different types, each has separate
  * ratelimiting, so that positive queries are not impeded by others */
-static uint16_t rrl_classify(query_type* query, const uint8_t** d,	
+static uint16_t rrl_classify(query_type* query, const uint8_t** d,
 	size_t* d_len)
 {
 	if(RCODE(query->packet) == RCODE_NXDOMAIN) {
@@ -262,7 +288,7 @@ static void examine_query(query_type* query, uint32_t* hash, uint64_t* source,
 
 	*source = rrl_get_source(query, &c2);
 	c = rrl_classify(query, &dname, &dname_len);
-	if(query->zone && query->zone->opts && 
+	if(query->zone && query->zone->opts &&
 		(query->zone->opts->pattern->rrl_whitelist & c))
 		*lm = rrl_whitelist_ratelimit;
 	if(*lm == 0) return;
@@ -416,7 +442,7 @@ int rrl_process_query(query_type* query)
 query_state_type rrl_slip(query_type* query)
 {
 	/* discard half the packets, randomly */
-	if((random() & 0x1)) {
+	if((rrl_slip_ratio > 0) && ((rrl_slip_ratio == 1) || ((random() % rrl_slip_ratio) == 0))) {
 		/* set TC on the rest */
 		TC_SET(query->packet);
 		ANCOUNT_SET(query->packet, 0);
